Fix horizontal scrollbar

--- a/style/app.less
+++ b/style/app.less
@@ -47,7 +47,7 @@ em, i {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - var(--header-height));
 
     &:after {
